# SpriteEditor

./: .gitignore  CMakeLists.txt  README.md  SpriteEditor.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  spritearea.cpp  spritearea.h
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  spritearea.cpp  spritearea.h
